2001-10-19 Alexander Rawass <alexannika@users.sourceforge.net>

	* added colors and bindings to vegaconfig
	  - the bindings are parsed but not yet bound
	* added src/mission.{cpp,h}
	  - the mission is parsed but not yet used
	* modified src/Makefile.am (added mission)
	* added data/test1.mission
	* modified data/Makefile.am (added test1.mission)
	* added call to Mission to main.cpp (preliminary)
	

2001-10-18 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* added easydom.{cpp,h}
	* added easydom.{cpp,h} to src/Makefile.am
	* re-wrote src/vegaconfig
	* re-wrote data/vegastrike.config
	* added config tests in main.cpp

	
2001-10-16 Alexander Rawass <alexannika@users.sourceforge.net>

	* modified src/vegaconfig
	* added vegaconfig.{cpp,h} to src/Makefile.am
	* added call to VegaConfig to main.cpp::main
	

2001-10-16 Alexander Rawass <alexannika@users.sourceforge.net>

	* added data/vegastrike.config (not used yet)
	* added src/vegaconfig.h  (not used yet)
	* added src/vegaconfig.cpp (not used yet)
	* changed data/Makefile.am from pattern to list
	
	
2001-10-14 Alexander Rawass <alexannika@users.sourceforge.net>

	* added data/Makefile.am
	* modified src/Makefile.am to install binary in $(prefix)/games/@PACKAGE@/bin
	* added objconf/Makefile.am
	* changed configure.in :
	  - version set to 0.0.9cvs
	  - added data and objconv to AC_OUTPUT
	* changed toplevel Makefile.am to find subdirs data and objconv
	* added RPM spec file vegastrike.spec
	

2001-10-11 Alexander Rawass <alexannika@users.sourceforge.net>

	* added joystick buttons
	  - wrote BindButton etc in in_joystick
	  - buttonBindings are called in ProcessJoystick
	  - buttons are bound in FlyByJoystick (FireKeyboardButtons don't work?)
	  - buttonState is set in FlyByJoystick::Execute

	
2001-10-11 Alexander Rawass <alexannika@users.sourceforge.net>

	* made joystick work (no buttons yet, no hat, just steering)
	  - no FlyByWire::Execute(); is called in FlyByKeyboard::Execute()