@@ -20,6 +20,7 @@
                 	<var name="aspect" value="1.3"/>
                 	<var name="znear" value="1.0"/>
                 	<var name="zfar" value="50000"/>
+			<var name="starblend" value="true"/>
         	</section>
 		<section name="player">
 			<var name="realname" value="Alexander Rawass"/>
