@@ -1,3 +1,11 @@
+2001-10-19 Daniel Horn <hellcatv@hotmail.com>
+
+	* added stub functions in for planned audio functions
+	* used stub functions in the places where audio will be present
+	* added some init functions to OpenAL functions
+	* added config files to gfxlib so they use vegastrike.config
+	* added config file defaults to star_system star blending
+
 2001-10-19 Alexander Rawass <alexannika@users.sourceforge.net>
 
 	* added colors and bindings to vegaconfig
